[gd_scene load_steps=29 format=3 uid="uid://qm3kxfv0fbvv"]

[ext_resource type="PackedScene" uid="uid://cfhhjjuwknoie" path="res://scenes/mainhero.tscn" id="1_igrn4"]
[ext_resource type="Script" path="res://scenes/game.gd" id="1_vyv8w"]
[ext_resource type="Texture2D" uid="uid://be0u4s37y17bc" path="res://earth.png" id="3_17eru"]
[ext_resource type="Texture2D" uid="uid://cbmd0xyualoep" path="res://door.png" id="5_6okx1"]
[ext_resource type="Texture2D" uid="uid://cfovaucwri8gi" path="res://sprites/brokenpart1.png" id="6_17yp6"]
[ext_resource type="Texture2D" uid="uid://76ogtkmwnhuh" path="res://button.png" id="6_qo2u7"]
[ext_resource type="Texture2D" uid="uid://e8tyhg8ko4ga" path="res://sprites/leveroff.png" id="7_e2e2e"]
[ext_resource type="Texture2D" uid="uid://dj52yyoaxlq2x" path="res://sprites/brokenpart2.png" id="7_kgwh2"]
[ext_resource type="Texture2D" uid="uid://cdpjk6v7gwttr" path="res://sprites/leveron.png" id="8_12nlv"]
[ext_resource type="Texture2D" uid="uid://evd0kv6nl5p4" path="res://sprites/brokenpart3.png" id="8_jc6g0"]
[ext_resource type="PackedScene" uid="uid://bxelnrq1hgr3j" path="res://scenes/npc_1.tscn" id="8_qqnq8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lo0im"]
size = Vector2(1917, 224)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uhhr6"]
size = Vector2(489, 568)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lvvu"]
size = Vector2(117, 178)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8vvpn"]
size = Vector2(1922, 222.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3fyn"]
size = Vector2(202.5, 728)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qg4x2"]
size = Vector2(275.59, 53.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmo8c"]
size = Vector2(272.125, 64.125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pb1l2"]
size = Vector2(2209.74, 248.54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2imww"]
size = Vector2(4880.07, 161.164)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6h4qn"]
size = Vector2(367, 566)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ymcte"]
size = Vector2(59.6401, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_y2p2c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_17yp6")
}, {
"duration": 1.0,
"texture": ExtResource("7_kgwh2")
}, {
"duration": 1.0,
"texture": ExtResource("8_jc6g0")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kuupd"]
size = Vector2(40, 40.0128)

[sub_resource type="Animation" id="Animation_qpemh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_e4ob3"]
resource_name = "start"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fc8oe"]
_data = {
"RESET": SubResource("Animation_qpemh"),
"start": SubResource("Animation_e4ob3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n02i5"]
size = Vector2(74, 126)

[node name="base_level" type="Node2D"]
script = ExtResource("1_vyv8w")

[node name="mainhero" parent="." instance=ExtResource("1_igrn4")]
z_index = 5
position = Vector2(93, 513)

[node name="camera" type="Camera2D" parent="."]
position = Vector2(584, 396)

[node name="floor1" type="StaticBody2D" parent="."]

[node name="floor" type="Sprite2D" parent="floor1"]
position = Vector2(666, 886)
scale = Vector2(1.42083, 2.91071)
texture = ExtResource("3_17eru")

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor1"]
position = Vector2(606.5, 672)
shape = SubResource("RectangleShape2D_lo0im")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="floor1"]
position = Vector2(-175, 276)
shape = SubResource("RectangleShape2D_uhhr6")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="floor1"]
position = Vector2(1320.5, 276)
shape = SubResource("RectangleShape2D_uhhr6")

[node name="wallleft" type="Sprite2D" parent="floor1"]
position = Vector2(-319.5, 248)
scale = Vector2(0.399479, 6.625)
texture = ExtResource("3_17eru")

[node name="wallright" type="Sprite2D" parent="floor1"]
position = Vector2(1554.5, 252)
scale = Vector2(0.495313, 6.71429)
texture = ExtResource("3_17eru")

[node name="Sprite2D" type="Sprite2D" parent="floor1"]
position = Vector2(534, -258)
scale = Vector2(1, 3.50223)
texture = ExtResource("3_17eru")

[node name="firstdoor" type="StaticBody2D" parent="."]
position = Vector2(1, 0)

[node name="doorsprite" type="Sprite2D" parent="firstdoor"]
position = Vector2(662, 485)
texture = ExtResource("5_6okx1")
metadata/_edit_lock_ = true

[node name="zone" type="Area2D" parent="firstdoor"]
position = Vector2(-3, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="firstdoor/zone"]
position = Vector2(664, 483)
shape = SubResource("RectangleShape2D_4lvvu")
debug_color = Color(0.729412, 0.47451, 0.0235294, 0.419608)
metadata/_edit_lock_ = true

[node name="button" type="Sprite2D" parent="firstdoor"]
visible = false
position = Vector2(662, 372)
texture = ExtResource("6_qo2u7")
metadata/_edit_lock_ = true

[node name="floor2" type="StaticBody2D" parent="."]
position = Vector2(-2, -2)

[node name="Sprite2D2" type="Sprite2D" parent="floor2"]
position = Vector2(3196.5, 4547)
scale = Vector2(0.333854, 4.7567)
texture = ExtResource("3_17eru")

[node name="Sprite2D3" type="Sprite2D" parent="floor2"]
position = Vector2(4277, 3828)
scale = Vector2(1, 3.20982)
texture = ExtResource("3_17eru")

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor2"]
position = Vector2(4277, 4848.75)
shape = SubResource("RectangleShape2D_8vvpn")

[node name="Sprite2D" type="Sprite2D" parent="floor2/CollisionShape2D"]
position = Vector2(1, 3.75)
texture = ExtResource("3_17eru")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="floor2"]
position = Vector2(3422, 4379.5)
shape = SubResource("RectangleShape2D_i3fyn")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="floor2"]
position = Vector2(3828.21, 4679.63)
shape = SubResource("RectangleShape2D_qg4x2")

[node name="Sprite2D4" type="Sprite2D" parent="floor2/CollisionShape2D3"]
position = Vector2(-0.205322, -0.875)
scale = Vector2(0.14375, 0.22991)
texture = ExtResource("3_17eru")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="floor2"]
z_index = 2
position = Vector2(4573, 4504)
shape = SubResource("RectangleShape2D_qg4x2")

[node name="Sprite2D4" type="Sprite2D" parent="floor2/CollisionShape2D11"]
position = Vector2(0.999756, -2)
scale = Vector2(0.14375, 0.22991)
texture = ExtResource("3_17eru")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="floor2"]
position = Vector2(4212.54, 4586.75)
shape = SubResource("RectangleShape2D_qg4x2")

[node name="Sprite2D5" type="Sprite2D" parent="floor2/CollisionShape2D4"]
position = Vector2(0.730469, 0.125)
scale = Vector2(0.142989, 0.231028)
texture = ExtResource("3_17eru")

[node name="platform123" type="CollisionShape2D" parent="floor2"]
position = Vector2(4221, 4352)
shape = SubResource("RectangleShape2D_xmo8c")

[node name="Sprite2D" type="Sprite2D" parent="floor2/platform123"]
position = Vector2(-0.937439, 0.0625383)
scale = Vector2(0.148363, 0.258929)
texture = ExtResource("3_17eru")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="floor2"]
position = Vector2(5553.39, 4624.5)
scale = Vector2(0.35625, 4.46205)
shape = SubResource("RectangleShape2D_pb1l2")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="floor2"]
position = Vector2(4341, 3818)
scale = Vector2(0.35625, 4.46205)
shape = SubResource("RectangleShape2D_2imww")

[node name="camerazone2" type="Area2D" parent="floor2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor2/camerazone2"]
position = Vector2(4978, 4458)
shape = SubResource("RectangleShape2D_6h4qn")
debug_color = Color(0.972549, 0.317647, 0.4, 0.419608)

[node name="CollisionShape2D7" type="CollisionShape2D" parent="floor2"]
position = Vector2(4123, 4286)
shape = SubResource("RectangleShape2D_ymcte")

[node name="firstlobbycamerapos" type="Marker2D" parent="."]
position = Vector2(583.555, 395.916)

[node name="secondroompos" type="Marker2D" parent="."]
position = Vector2(4277, 4682)

[node name="secondroomcameramark" type="Marker2D" parent="."]
position = Vector2(4234, 4470)

[node name="platformmarker" type="Marker2D" parent="."]
position = Vector2(4191, 4406)

[node name="firstlobbymark" type="Marker2D" parent="."]
position = Vector2(285.561, 483.438)

[node name="secondroompart2mark" type="Marker2D" parent="."]
position = Vector2(4935, 4470)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5514, 4642)
scale = Vector2(0.35625, 4.46205)
texture = ExtResource("3_17eru")

[node name="brokenpart1" type="StaticBody2D" parent="."]
position = Vector2(4185, 4286.05)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="brokenpart1"]
position = Vector2(12.8125, -3.02588)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_y2p2c")
frame_progress = 0.0291271

[node name="stop" type="Area2D" parent="brokenpart1"]
position = Vector2(-34.1875, -8.02588)

[node name="CollisionShape2D" type="CollisionShape2D" parent="brokenpart1/stop"]
position = Vector2(46.1875, 2.97412)
shape = SubResource("RectangleShape2D_kuupd")
debug_color = Color(0.141176, 0.101961, 0, 0.419608)

[node name="stiop_timer" type="Timer" parent="brokenpart1"]
wait_time = 4.0
one_shot = true

[node name="npc1" parent="." instance=ExtResource("8_qqnq8")]
position = Vector2(443, 509)
metadata/_edit_lock_ = true

[node name="text" type="RichTextLabel" parent="npc1"]
visible = false
offset_left = -101.0
offset_top = -107.0
offset_right = 104.0
offset_bottom = -32.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 15
text = "text label text label text label
text label text label "
visible_characters = 0
visible_ratio = 0.0

[node name="text2" type="RichTextLabel" parent="npc1"]
offset_left = -119.0
offset_top = -142.0
offset_right = 144.0
offset_bottom = -18.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "text label text label text label 
text label text label text label"
visible_characters = 0
visible_ratio = 0.0

[node name="text1_timer" type="Timer" parent="npc1"]
wait_time = 0.1

[node name="end1_timer" type="Timer" parent="npc1"]
wait_time = 8.0
one_shot = true

[node name="text2_timer" type="Timer" parent="npc1"]
wait_time = 0.1

[node name="end2_timer" type="Timer" parent="npc1"]
wait_time = 15.0
one_shot = true

[node name="start_transition" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="start_transition"]
libraries = {
"": SubResource("AnimationLibrary_fc8oe")
}

[node name="ColorRect" type="ColorRect" parent="start_transition/AnimationPlayer"]
offset_left = -136.0
offset_top = -11.0
offset_right = 1216.0
offset_bottom = 851.0
color = Color(0, 0, 0, 1)

[node name="lever" type="StaticBody2D" parent="."]
position = Vector2(4997, 4644)
disable_mode = 1

[node name="leveroff" type="Sprite2D" parent="lever"]
position = Vector2(16, -2)
scale = Vector2(1.8, 1.8)
texture = ExtResource("7_e2e2e")

[node name="Area2D" type="Area2D" parent="lever"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lever/Area2D"]
position = Vector2(17, 27)
shape = SubResource("RectangleShape2D_n02i5")
debug_color = Color(0.258824, 0.619608, 0.4, 0.419608)

[node name="leveron" type="Sprite2D" parent="lever"]
visible = false
position = Vector2(16, -2)
scale = Vector2(1.8, 1.8)
texture = ExtResource("8_12nlv")

[node name="notready" type="Label" parent="."]
visible = false
offset_left = 4156.0
offset_top = 4207.0
offset_right = 4511.0
offset_bottom = 4861.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet 
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet
not ready yet not ready yet not ready yet"

[connection signal="body_entered" from="firstdoor/zone" to="." method="_on_zone_body_entered"]
[connection signal="body_exited" from="firstdoor/zone" to="." method="_on_zone_body_exited"]
[connection signal="body_entered" from="floor2/camerazone2" to="." method="_on_camerazone_2_body_entered"]
[connection signal="body_exited" from="floor2/camerazone2" to="." method="_on_camerazone_2_body_exited"]
[connection signal="body_entered" from="brokenpart1/stop" to="." method="_on_stop_body_entered"]
[connection signal="timeout" from="brokenpart1/stiop_timer" to="." method="_on_stiop_timer_timeout"]
[connection signal="timeout" from="npc1/text1_timer" to="npc1" method="_on_text_timer_timeout"]
[connection signal="timeout" from="npc1/end1_timer" to="npc1" method="_on_end_1_timer_timeout"]
[connection signal="timeout" from="npc1/text2_timer" to="npc1" method="_on_text_2_timer_timeout"]
[connection signal="timeout" from="npc1/end2_timer" to="npc1" method="_on_end_2_timer_timeout"]
[connection signal="body_entered" from="lever/Area2D" to="." method="_on_area_2d_body_entered"]
